# cpp_starter_project_GLFW

./: .gitmodules  CMakeLists.txt
src/: main.cpp
